--- a/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_tasks.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_tasks.adoc
@@ -135,15 +135,16 @@ include::sample[dir="snippets/bestPractices/useCacheabilityAnnotations/groovy",f
 == Do not call `get()`` on a Provider outside of a Task action
 :keywords: tasks,inputs-and-outputs
 
-When configuring tasks and extensions do not call link:{javadocPath}/org/gradle/api/provider/Provider.html#get()[`get()`] on a provider, use link:{javadocPath}/org/gradle/api/provider/Provider.html#map(org.gradle.api.Transformer)[`map()`], or link:{javadocPath}/https://docs.gradle.org/nightly/javadoc/org/gradle/api/provider/Provider.html#flatMap(org.gradle.api.Transformer)[`flatMap()`] instead.any
+When configuring tasks and extensions do not call link:{javadocPath}/org/gradle/api/provider/Provider.html#get()[`get()`] on a provider, use link:{javadocPath}/org/gradle/api/provider/Provider.html#map(org.gradle.api.Transformer)[`map()`], or link:{javadocPath}/https://docs.gradle.org/nightly/javadoc/org/gradle/api/provider/Provider.html#flatMap(org.gradle.api.Transformer)[`flatMap()`] instead
 
 === Explanation
 
-A provider should be evaluated as late as possible (if evaluated). Calling `get()` leads to evaluating it, which can have multiple side effects on your project:
+A provider should be evaluated as late as possible. 
+Calling `get()` forces immediate evaluation, which can trigger unintended side effects, such as:
 
 - The value of the provider becomes an input to configuration, causing potential configuration cache misses.
-- It may be too early, so you don’t actually use the final and correct value of the property. This may lead to painful and hard to debug ordering issues
-- It breaks build dependencies, making automatic task dependency wiring provided by Gradle impossible.
+- The value may be evaluated too early, meaning you might not be using the final or correct value of the property. This may lead to painful and hard to debug ordering issues.
+- It breaks Gradle’s ability to build dependencies and to track task inputs and outputs, making automatic task dependency wiring impossible.
 
 === Example
 
@@ -163,8 +164,8 @@ include::sample[dir="snippets/bestPractices/avoidProviderGetOutsideTaskAction/ko
 include::sample[dir="snippets/bestPractices/avoidProviderGetOutsideTaskAction/groovy",files="build.gradle[tags=avoid-this]"]
 ====
 
-<1> *Reading the value of currentEnvironment at configuration time*: This value might change by the time the task start executing.
-<2> *Reading the value of buildDirectory at configuration time*: This value might change by the time the task start executing.
+<1> *Reading the value of `currentEnvironment` at configuration time*: This value might change by the time the task start executing.
+<2> *Reading the value of `buildDirectory` at configuration time*: This value might change by the time the task start executing.
 
 ==== Do This Instead
 
@@ -175,8 +176,8 @@ include::sample[dir="snippets/bestPractices/avoidProviderGetOutsideTaskAction/ko
 include::sample[dir="snippets/bestPractices/avoidProviderGetOutsideTaskAction/groovy",files="build.gradle[tags=do-this]"]
 ====
 
-<1> *Using `map()` to transform currentEnvironment*: `map` transform runs only when the value is read.
-<2> *Using `file()` to create a new Provider<RegularFile>*: the value of the buildDirectory is only checked when the value of the provider is read.
+<1> *Using `map()` to transform `currentEnvironment`*: `map` transform runs only when the value is read.
+<2> *Using `file()` to create a new `Provider<RegularFile>`*: the value of the `buildDirectory` is only checked when the value of the provider is read.
 
 === References
 
