add keywords to page

--- a/platforms/documentation/docs/src/docs/userguide/authoring-builds/basics/build_lifecycle.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/authoring-builds/basics/build_lifecycle.adoc
@@ -14,6 +14,7 @@
 
 [[build_lifecycle]]
 = Build Lifecycle
+:keywords: lifecycle
 
 As a build author, you define tasks and specify dependencies between them.
 Gradle guarantees that tasks will execute in the order dictated by these dependencies.
