--- a/platforms/documentation/docs/src/docs/userguide/authoring-builds/gradle-properties/properties_providers.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/authoring-builds/gradle-properties/properties_providers.adoc
@@ -14,6 +14,7 @@
 
 [[properties_and_providers]]
 = Understanding Properties and Providers
+:keywords: properties, providers, regularfileproperty, directoryproperty, listproperty, setproperty, mapproperty, configurablefilecollection, configurablefiletree
 
 Gradle provides properties that are important for <<lazy_configuration.adoc#lazy_configuration,lazy configuration>>.
 When implementing a custom task or plugin, it's imperative that you use these lazy properties.
