--- a/platforms/documentation/docs/src/docs/userguide/running-builds/features/command_line_interface.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/running-builds/features/command_line_interface.adoc
@@ -14,6 +14,7 @@
 
 [[command_line_interface_reference]]
 = Command-Line Interface Reference
+:keywords: cli
 
 The command-line interface is the **primary method of interacting with Gradle**.
 
