--- a/platforms/documentation/docs/src/docs/userguide/authoring-builds/gradle-properties/service_injection.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/authoring-builds/gradle-properties/service_injection.adoc
@@ -14,7 +14,7 @@
 
 [[service_injection]]
 = Understanding Services and Service Injection
-:keywords: services,service,injection,inject
+:keywords: services, service, injection, inject, objectfactory, providerfactory, workerexecutor, archiveoperations, execoperations, toolingmodelbuilderregistry, testeventreporterfactory
 
 Gradle provides a number of useful services that can be used by custom Gradle types.
 For example, the link:{javadocPath}/org/gradle/workers/WorkerExecutor.html[WorkerExecutor] service can be used by a task to run work in parallel, as seen in the <<worker_api.adoc#worker_api,worker API>> section.
