--- a/platforms/documentation/docs/src/docs/userguide/running-builds/directory_layout.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/running-builds/directory_layout.adoc
@@ -14,7 +14,7 @@
 
 [[directory_layout]]
 = Gradle-managed Directories
-:keywords: gradle,user,home,project,root
+:keywords: gradle, user, home, project, root, directory
 
 Gradle uses two main directories to perform and manage its work:
 
