--- a/platforms/documentation/docs/src/docs/userguide/authoring-builds/structuring/composite_builds.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/authoring-builds/structuring/composite_builds.adoc
@@ -14,6 +14,7 @@
 
 [[composite_builds]]
 = Composite Builds
+:keywords: composite, include, included, build
 
 A composite build is a build that includes other builds.
 
