add more keywords

--- a/platforms/documentation/docs/src/docs/userguide/authoring-builds/other/init_scripts.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/authoring-builds/other/init_scripts.adoc
@@ -14,7 +14,7 @@
 
 [[init_scripts]]
 = Initialization Scripts
-:keywords: init, gradle, script
+:keywords: init, script, init.gradle
 
 Initialization scripts are scripts that run before the build script is executed.
 They allow you to customize the build environment or configure settings early in the build.
