Clarify item with review suggestions

--- a/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_general.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_general.adoc
@@ -180,16 +180,20 @@ include::sample[dir="snippets/bestPractices/avoidInternal/groovy",files="build.g
 == Do Not Put Source Files in the Root Project
 :keywords: structuring-builds
 
-Do not put source files in your root project; instead, put them in an included (sub)project.
+Do not put source files in your root project; instead, put them in a separate project.
 
 === Explanation
 
 The root project is a special project in Gradle that serves as the entry point for your build.
 
 It is the place to configure settings that apply globally to the entire build.
-For example, you can declare (but not apply) plugins here to ensure the same plugin version is consistently available across all projects and define other configurations shared by all projects within the build.
+For example, you can _declare_ (but not apply) plugins here to ensure the same plugin version is consistently available across all projects and define other configurations shared by all projects within the build.
 
-It should not be used for source files, instead they should be located in a separate (sub)project.
+NOTE: Be careful not to apply plugins unnecessarily in the root project - many plugins only affect source code and should only be applied to the projects that contain source code.
+
+The root project should not be used for source files, instead they should be located in a separate Gradle project.
+
+Setting up your build like this from the start will also make it easier to add new projects as your build grows in the future.
 
 === Example
 
