--- a/platforms/documentation/docs/src/docs/userguide/running-builds/features/command_line_interface.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/running-builds/features/command_line_interface.adoc
@@ -14,7 +14,13 @@
 
 [[command_line_interface_reference]]
 = Command-Line Interface Reference
-:keywords: cli
+:keywords: cli, clean, check, projects, tasks, rerun-tasks, continue, build-cache, no-build-cache, configuration-cache, no-configuration-cache, configuration-cache-problems, configure-on-demand, no-configure-on-demand, max-workers, parallel, no-parallel, priority, profile, scan, watch-fs, no-watch-fs, help, version, show-version, full-stacktrace, stacktrace, org.gradle.debug, org.gradle.debug.host, org.gradle.debug.port, org.gradle.debug.server, org.gradle.debug.suspend, org.gradle.daemon.debug, project-cache-dir, system-prop, init-script, project-prop, org.gradle.jvmargs, org.gradle.java.home, gradle-user-home, dependency-verification, write-verification-metadata, refresh-keys, export-keys, include-build, offline, refresh-dependencies, dry-run, continuous, write-locks, update-locks , no-rebuild, org.gradle.warning.mode, warning-mode, no-problems-report, problems-report, org.gradle.console, console, org.gradle.logging.level, quiet, warn, info, debug, daemon, no-daemon, foreground, status, stop, org.gradle.daemon.idletimeout, exclude-task
+
+distribution-type, gradle-distribution-url, gradle-distribution-sha256-sum, gradle-version
+continuous
+rerun-task, rerun
+
+
 
 The command-line interface is the **primary method of interacting with Gradle**.
 
